<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.damien.myapplication.UI.Activity.ChatActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_new_message"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_new_message"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
