<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.damien.myapplication.UI.Activity.FunSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/fun_color_draw" />

        <Button
            android:id="@+id/but_color"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/fun_color_draw_selected" />

        <Button
            android:id="@+id/but_color_selected"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Button
        android:id="@+id/but_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/enter" />

    <Button
        android:id="@+id/but_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/but_default_value"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/default_value" />

</LinearLayout>
