<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.damien.myapplication.UI.Activity.FunActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.example.damien.myapplication.UI.View.DrawSurface
            android:id="@+id/draw_surface"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_circle" />

            <RadioButton
                android:id="@+id/radio_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_square" />

            <RadioButton
                android:id="@+id/radio_nyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_nyan" />
        </RadioGroup>

        <SeekBar
            android:id="@+id/seek_size"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:max="100" />
    </LinearLayout>
</RelativeLayout>
